--- a/Billed-app-FR-Front/package.json
+++ b/Billed-app-FR-Front/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "global": "^4.4.0",
+    "jest-when": "^3.5.2",
     "jquery": "^3.7.0",
     "jsdom": "^22.1.0",
     "npm-check-updates": "^16.10.12",
